Release Notes

* current
  * sorting datasetIDs to avoid dead-lock
  * added NOWAIT to updateJobStatus
  * fixed reassignTask.py
  * setting proper jobDefID when attemptNr>1 as well
  * adding NOWAIT to finalizePendingJobs
  * improved error message of getScriptOfflineRunning
  * fixed ppEventServiceJob not to update modTime for file and jobO
  * changed TA to work with mcshare(TW)=0
  * added a protection to EP for missing replica metadata
  * changed timeout for staring to 48h
  * changed getOriginPandaIDs to return only one origin
  * changed timeout for starting jobs to 12h
  * changed to keep endTime when jobs are killed
  * changed to ignore heartbeats when job is in merging
  * checking job status in updateEventRange
  * using Production Input/Output as subscription activities
  * recording throttled into jobs_statuslog
  * changed the task brokerage to use negative weight based on missing input size
  * fixed propagateResult for pmerge to update T_TASK.total_events 
  * changed TA to use sites where data is fully or partially available
  * removed old machinery to reassign reprocessing jobs
  * changed killUnusedEsConsumers to kill running jobs as well
  * cleanup in taskBuffer
  * added checkInvalidCharacters
  * added olderThan to reassignSite
  * changed reaper to expired
  * cleanup of the brokerage
  * fixed reassignSite for options
  * using stateChangeTime for heartbeat check of starting jobs
  * changed starting jobs not to be updated by subsequent heartbeats 
  * using panda instead of user account in EP
  * removed setReplicaMetaDataAttribute from EP
  * added partial finish
  * setting None to pre-merged log files when sending ES merge jobs
  * added protection to SetupperAtlas against new files copied after JEDI file lookup
  * fixed EventPicking to use only complete replicas
  * removed constraint with T1 data from TA
  * added soft finish
  * using ignore_availability when making subscriptions
  * making _dis w/o source when missing at T1